live_search_unmap: check if priv->hook_widget is not NULL

https://bugzilla.gnome.org/show_bug.cgi?id=692105